--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YouTuber Roblox</title>
+    <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+<div>
+    <div class="card">
+        <a href="https://t.me/+oU8FySq0wPQ3MjQy"><img src="img/Telegram_logo.svg.png"/></a>
+    </div>
+    <div class="tex">
+        <h2>сообшения</h2>
+        <a href="https://t.me/+oU8FySq0wPQ3MjQy">Telegram</a>
+    </div>
+    <div class="tex">
+        <img src="img/Idea-Solution-PNG-Image.png" alt="Idea-Solution-PNG-Image">
+        <div>
+            <h2>идея для ролика</h2>
+        </div>
+    </div>
+</div>
+</body>
+</html>
